# miden-vm

./: README.md
assembly/src/procedures/: mod.rs
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs  verify_wrapper.rs
