[package]
name = "miden-verifier"
version = "0.3.0"
description="Miden VM execution verifier"
authors = ["miden contributors"]
readme="README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
edition = "2021"
rust-version = "1.62"

[lib]
name = "zilch_verifier"
crate-type = ["cdylib", "lib"]

[features]
default = ["std"]
std = ["air/std", "assembly/std", "vm-core/std", "winterfell/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.3", default-features = false }
assembly = { package = "miden-assembly", path = "../assembly", version = "0.3", default-features = false }
borsh = "0.10.2"
bytemuck = "1.13.0"
solana-program = "1.15.2"
vm-core = { package = "miden-core", path = "../core", version = "0.3", default-features = false }
winterfell = { package = "winter-verifier", version = "0.4.2", default-features = false }
